Updated Status and changed feeds

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   <a href="https://www.infragistics.com/products/ignite-ui-angular?utm_source=StackBlitz&utm_medium=Project&utm_campaign=Angular&utm_term=19-01#components" target="_blank">
     <button igxButton="raised" igxRipple="white">Discover More</button>
   </a>
-  <a href="" target="_blank">
+  <a href="cont" target="_blank">
     <button igxButton="raised" igxRipple="white">Contact Us</button>
   </a>
 </div>
